--- a/style/style.css
+++ b/style/style.css
@@ -1,18 +1,31 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
 body{
     background-color: white;
 }
 
 header{
-    max-width: 1900px;
-    margin: -25px 0px 0px -20px;
-    padding:20vh;
+    margin: -15px -8px;
+    padding:2vh;
     background-color: black;
+    background-size: 100% 100%;
     color: white;
-    font-family: sans-serif;
-
     text-align: center;
+}
+
+header h1{
+    font-family: "Passion One", serif;
+    font-size: 10em;
+
+    margin: auto;
+}
+
+header h2{
+    font-family: serif;
+    font-size: 2em;
 }
 
 header a{
@@ -32,9 +45,15 @@ article{
     height: auto;
     color: black;
     margin: auto;
-    font-size: 8em;
     background-size: cover;
     background-attachment: fixed;
+}
+
+article p{
+    font-family: "Sriracha", serif;
+    line-height: 2em;
+    font-size: 4em;
+    max-width: 700px;
 }
 
 article#two{
@@ -43,6 +62,19 @@ article#two{
     background-size: 100% 100%;
 }
 
-article#two p{
+article#four{
     color: white;
+    background-image: url(../imagens/background002.jpg);
+    background-size: 100% 100%;
+}
+
+article div.imagem{
+    margin: 0px 20px;
+    max-width: 700px;
+    background-color: rgba(129, 129, 129, 0.781);
+    background-size: 80% 80%;
+}
+
+.imagem p{
+    margin: 15px;
 }
