--- a/style/style.css
+++ b/style/style.css
@@ -70,6 +70,7 @@ article#four{
     color: white;
     background-image: url(../imagens/background002.jpg);
     background-size: 100% 100%;
+    background-attachment: fixed;
 }
 
 article div.imagem{
