--- a/style/style.css
+++ b/style/style.css
@@ -66,6 +66,7 @@ article p{
 }
 
 article#two{
+    margin: -8px;
     color: white;
     background-image: url(../imagens/background001.jpg);
     background-size: 100% 100%;
@@ -73,6 +74,7 @@ article#two{
 }
 
 article#four{
+    margin: -8px;
     color: white;
     background-image: url(../imagens/background002.jpg);
     background-size: 100% 100%;
