--- a/style/style.css
+++ b/style/style.css
@@ -75,6 +75,7 @@ article#two{
     background-size: cover;
     background-attachment: fixed;
     box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.219);
+    margin: 0px -8px;
 }
 
 article#four{
@@ -85,6 +86,7 @@ article#four{
     background-size: cover;
     background-attachment: fixed;
     box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.219);
+    margin: 0px -8px;
 }
 
 article div.imagem{
